rendered/envs/zoo/linkwarden/namespace-linkwarden.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    a8r.io/repository: git@github.com:kbudde/lab.git
  name: linkwarden
  namespace: linkwarden
