rendered/envs/zoo/linkwarden/deployment-linkwarden.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/repository: git@github.com:kbudde/lab.git
  name: linkwarden
  namespace: linkwarden
spec:
  selector:
    matchLabels:
      app: linkwarden
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: linkwarden
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: linkwarden
          image: ghcr.io/linkwarden/linkwarden:latest
          imagePullPolicy: IfNotPresent
          name: linkwarden
          ports:
            - containerPort: 3000
              name: web
              protocol: TCP
          volumeMounts:
            - mountPath: /data/data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: linkwarden
