rendered/envs/zoo/linkwarden/service-linkwarden.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: git@github.com:kbudde/lab.git
  labels:
    app: linkwarden
  name: linkwarden
  namespace: linkwarden
spec:
  ports:
    - name: web
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: linkwarden
  type: ClusterIP
