rendered/envs/zoo/linkwarden/ingress-linkwarden.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    a8r.io/repository: git@github.com:kbudde/lab.git
  name: linkwarden
  namespace: linkwarden
spec:
  rules:
    - host: linkwarden.zoo.budd.ee
      http:
        paths:
          - backend:
              service:
                name: linkwarden
                port:
                  number: 3000
            path: /
            pathType: ImplementationSpecific
